# fastapi-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  worker.py
app/core/: audio.py  concurrency.py  config.py  constants.py  database.py  health.py  logging.py  middleware.py  rate_limit.py  retry.py  schema.py
app/integrations/: call_manager.py  conversation.py  interfaces.py  openai_adapter.py  prompt_builder.py  realtime_bridge.py  realtime_call_manager.py  twilio_adapter.py
app/modules/admin/: service.py  views.py
app/modules/audit/: repository.py  service.py
app/modules/auth/: auth_handler.py  jwt_handler.py  schema.py  service.py  views.py
app/modules/calls/: exceptions.py  models.py  pricing.py  repository.py  schema.py  service.py  views.py  ws.py
app/modules/feedback/: views.py
app/modules/files/: service.py  views.py
app/modules/notifications/: constants.py  email_service.py  post_call.py  translations.py  webhook_dispatcher.py
app/modules/scheduler/: service.py  task_executor.py
app/modules/tasks/: exceptions.py  models.py  repository.py  schema.py  service.py  views.py
app/modules/templates/: exceptions.py  models.py  repository.py  schema.py  service.py  views.py
app/modules/users/: middleware.py  models.py  repository.py  schema.py  service.py  views.py
app/modules/webhooks/: realtime_ws.py  views.py
app/scripts/: constants.py  seed_demo.py  seed_templates.py
core/: config.py  database.py  logging.py  repositories.py
migrations/: env.py
migrations/versions/: 0531817bf8e0_add_is_active_to_dialog_template.py  429082e467df_initial.py  6644c3ebba61_add_language_to_dialog_template.py  6a89d9209f17_add_email_notifications_to_user.py  82ffd7b03b9b_add_retry_count_and_next_retry_at_to_.py  8d89c7173bff_add_deferred_to_task_status_enum.py  a251f22a133e_add_password_changed_at_to_user.py  a3c6783ccb02_add_index_on_task_scheduled_time.py  cb870bee6bfe_add_dialog_template_task_call_session_.py  f6c0dd4e684b_add_user_rating_columns_to_task.py  fc9ddc190cf9_add_local_recording_path_to_call_session.py
modules/files/: exceptions.py  models.py  repository.py  service.py  views.py
modules/users/: models.py  repository.py  schema.py  service.py  views.py
tests/integration/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_auth_flow.py  test_calls.py  test_feedback.py  test_files.py  test_health.py  test_tasks.py  test_templates.py  test_users.py  test_webhooks.py
tests/unit/: conftest.py
tests/unit/core/: test_audio.py  test_concurrency.py  test_config.py  test_database.py  test_logging.py  test_rate_limit.py  test_repositories.py  test_retry.py  test_validation.py
tests/unit/integrations/: test_call_manager.py  test_conversation.py  test_openai_adapter.py  test_prompt_builder.py  test_realtime_bridge.py  test_realtime_call_manager.py  test_twilio_adapter.py
tests/unit/modules/admin/: test_service.py
tests/unit/modules/audit/: test_repository.py
tests/unit/modules/auth/: test_jwt_handler.py  test_repository.py  test_service.py
tests/unit/modules/calls/: test_pricing.py  test_repository.py  test_service.py  test_ws.py
tests/unit/modules/files/: test_repository.py  test_service.py
tests/unit/modules/notifications/: test_email_service.py  test_post_call.py  test_webhook_dispatcher.py
tests/unit/modules/scheduler/: test_service.py  test_task_executor.py
tests/unit/modules/tasks/: test_repository.py  test_schema.py  test_service.py
tests/unit/modules/templates/: test_repository.py  test_service.py
tests/unit/modules/users/: test_middleware.py  test_service.py
tests/unit/modules/webhooks/: test_realtime_ws.py
