[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ana.gojinevschi",email = "ana.gojinevschi@ebs-integrator.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "sqlmodel (>=0.0.34,<0.0.35)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)",
]

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)"
]

[tool.setuptools.packages.find]
exclude = ["logs*", "migrations*"]

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["migrations"]
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "ASYNC", # flake8-async
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "BLE", # flake8-blind-except
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "FIX", # flake8 - fix me
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # typing
]

lint.ignore = [
    "ISC001", # Disabled to avoid unexpected behaviour on ruff format .
    "B904",
    "BLE001",
    "ANN002",
    "ANN003",
    "B024"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
